@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
-0.004003
+0.005000
+ [Added / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
 
 0.004002 2014-08-15T21:18:48Z
 
