@@ -1,6 +1,6 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
-0.004003
+0.005000
  [Changed / test recommends]
  - Test::More 1.001003 → 1.001006
 
